Right chart is better positioned within screen and new painting window will now appear in the left of the screen

--- a/3d_globe/css/bar.css
+++ b/3d_globe/css/bar.css
@@ -11,6 +11,16 @@
   font-weight: bold;
 }
 
+.charttooltip {
+    position: absolute;
+    min-width: 80px;
+    height: 80px;
+    background-color: red;
+    border: 1px solid #6F257F;
+    padding: 14px;
+    text-align: center;
+  }
+
 #map_controls {
     display: block;
     position: absolute;
