--- a/3d_globe/css/bar.css
+++ b/3d_globe/css/bar.css
@@ -12,13 +12,17 @@
 }
 
 .charttooltip {
-    position: absolute;
-    min-width: 80px;
-    height: 80px;
-    background-color: red;
-    border: 1px solid #6F257F;
-    padding: 14px;
-    text-align: center;
+  margin: 0 0 auto;
+  background-color: red;
+  color: white;
+  position: absolute;			
+  text-align: center;	
+  max-width: 500px;							
+  padding: 2px;				
+  font: 12px sans-serif;		
+  border: 0px;		
+  border-radius: 8px;			
+  pointer-events: none;		
   }
 
 #map_controls {
