--- a/3d_globe/css/bar.css
+++ b/3d_globe/css/bar.css
@@ -12,8 +12,9 @@
 }
 
 .charttooltip {
+  opacity: 0;
   margin: 0 0 auto;
-  background-color: red;
+  background-color: black;
   color: white;
   position: absolute;			
   text-align: center;	
@@ -22,7 +23,7 @@
   font: 12px sans-serif;		
   border: 0px;		
   border-radius: 8px;			
-  pointer-events: none;		
+  pointer-events: none;			
   }
 
 #map_controls {
