--- a/3d_globe/css/switch.css
+++ b/3d_globe/css/switch.css
@@ -1,4 +1,3 @@
-
 .option-group {
   width: 90%;
   max-width: 300px;
@@ -8,12 +7,12 @@
   border-radius: 0.25em;
   font-size: 1.6rem;
   margin: 0.2em auto;
-//  will-change: transform;
+  will-change: transform;
   transform: translateZ(0);
 }
 
 .option-container {
-  display: flex; 
+  display: flex;
   justify-content: center;
   align-items: stretch;
   width: 125%;
@@ -32,16 +31,16 @@
   margin: 0em;
   margin-right: 0.2em;
   &:last-child { margin-right: 0; }
-  
+
   border-radius: 0.25em;
-  
+
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
   flex-direction: column;
-  
+
   cursor: pointer;
-  
+
   opacity: 0.5;
   transition-duration: 0.8s, 0.6s;
   transition-property: transform, opacity;
@@ -58,7 +57,7 @@
   top: 0.5em;
   right: 0.5em;
   left: 0.5em;
-  
+
   &:before,
   &:after {
     content: '';
@@ -71,8 +70,6 @@
     top: 0;
     right: 0;
   }
-  
-
 }
 
 .option-input {
@@ -89,7 +86,6 @@
   font: URW Chancery L, cursive;
   font-size: 1em;
   font-weight: bold;
-
 }
 
 .option__label2 {
@@ -98,10 +94,7 @@
   margin-left:10px;
   font-size: 1em;
   font-weight: bold;
-
 }
-
-
 
 .option-input:checked ~ .option {
   transform: translateX(-20%) translateX(0.2em);
